--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "product map app",
   "main": "index.js",
   "scripts": {
-    "start": "watchify index.js -g cssify --outfile bundle.js & live-server --ignore=index.js,./",
-    "build": "browserify -g cssify index.js | uglifyjs --compress --output bundle.js"
+    "start": "webpack-dev-server --open",
+    "build": "webpack --config webpack.config.js"
   },
   "author": "Ben Upham",
   "license": "ISC",
@@ -13,15 +13,11 @@
     "ol": "^4.6.5"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babelify": "^8.0.0",
-    "browserify": "^16.2.0",
-    "cssify": "^1.0.3",
-    "http-server": "^0.11.1",
-    "live-server": "^1.2.0",
-    "uglify-js": "^3.3.21",
-    "watchify": "^3.11.0"
+    "css-loader": "^0.28.11",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.20.3",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   }
 }
