--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Ben Upham",
   "license": "ISC",
   "dependencies": {
+    "d3-array": "^1.2.1",
     "gm": "^1.23.1",
     "gmsmith": "^1.2.0",
     "imagemagick": "^0.1.3",
