--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "product-map",
+  "sideEffects": ["*.css"],
   "version": "1.0.0",
   "description": "product map app",
   "main": "index.js",
@@ -11,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "d3-array": "^1.2.1",
+    "d3-color": "^1.2.0",
+    "d3-scale": "^2.0.0",
+    "d3-scale-chromatic": "^1.3.0",
     "gm": "^1.23.1",
     "gmsmith": "^1.2.0",
     "imagemagick": "^0.1.3",
