--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "product-map",
-  "sideEffects": ["*.css"],
+  "sideEffects": [
+    "*.css"
+  ],
   "version": "1.0.0",
   "description": "product map app",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --host 0.0.0.0 --open",
+    "start": "webpack-dev-server --open",
+    "dev-server": "nodemon ./server.js localhost 8080",
     "build": "webpack --config webpack.config.js"
   },
   "author": "Ben Upham",
@@ -15,6 +18,7 @@
     "d3-color": "^1.2.0",
     "d3-scale": "^2.0.0",
     "d3-scale-chromatic": "^1.3.0",
+    "express": "^4.16.3",
     "gm": "^1.23.1",
     "gmsmith": "^1.2.0",
     "imagemagick": "^0.1.3",
@@ -25,7 +29,9 @@
   },
   "devDependencies": {
     "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
     "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.17.5",
     "style-loader": "^0.20.3",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
