--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Ben Upham",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.256.1",
     "d3-array": "^1.2.1",
     "d3-color": "^1.2.0",
     "d3-scale": "^2.0.0",
