--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "author": "Ben Upham",
   "license": "ISC",
   "dependencies": {
+    "@firebase/firestore": "^0.5.4",
     "aws-sdk": "^2.256.1",
     "d3-array": "^1.2.1",
     "d3-color": "^1.2.0",
     "d3-scale": "^2.0.0",
     "d3-scale-chromatic": "^1.3.0",
     "express": "^4.16.3",
+    "firebase": "^5.0.4",
+    "firebase-admin": "^5.12.1",
     "gm": "^1.23.1",
     "gmsmith": "^1.2.0",
     "imagemagick": "^0.1.3",
