--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
   "devDependencies": {
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.17.5",
     "style-loader": "^0.20.3",
+    "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3"
