--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.3",
     "firebase": "^5.0.4",
     "firebase-admin": "^5.12.1",
+    "image-batch-resizer": "^0.8.1",
     "imagemagick": "^0.1.3",
     "match-sorter": "^2.2.1",
     "ol": "^4.6.5",
