--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "cloudinary": "^1.11.0",
     "d3-array": "^1.2.1",
     "express": "^4.16.3",
+    "file-type": "^8.0.0",
     "firebase": "^5.0.4",
     "firebase-admin": "^5.12.1",
     "image-batch-resizer": "^0.8.1",
     "imagemagick": "^0.1.3",
+    "jimp": "^0.2.28",
     "match-sorter": "^2.2.1",
     "ol": "^4.6.5",
+    "read-chunk": "^2.1.0",
+    "spritesmith": "^3.3.1",
     "tinify": "^1.5.0"
   },
   "devDependencies": {
