--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "dev-server": "nodemon ./server.js localhost 8080",
+    "dev-server": "nodemon --ignore node-utility-scripts ./server.js localhost 8080",
     "build": "webpack --config webpack.config.js"
   },
   "author": "Ben Upham",
   "license": "ISC",
   "dependencies": {
     "@firebase/firestore": "^0.5.4",
+    "aws-sdk": "^2.259.1",
     "cloudinary": "^1.11.0",
     "d3-array": "^1.2.1",
     "express": "^4.16.3",
@@ -28,7 +29,8 @@
     "ol": "^4.6.5",
     "read-chunk": "^2.1.0",
     "spritesmith": "^3.3.1",
-    "tinify": "^1.5.0"
+    "tinify": "^1.5.0",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "css-loader": "^0.28.11",
