--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "dev-server": "nodemon --ignore node-utility-scripts --watch ./server.js ./server.js localhost 8080",
+    "dev-server": "nodemon --ignore node-utility-scripts --watch ./dev-node-server.js ./dev-node-server.js localhost 8080",
     "build": "webpack --config webpack.config.js"
   },
   "author": "Ben Upham",
