--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   ],
   "version": "1.0.0",
   "description": "product map app",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "dev-server": "nodemon --ignore node-utility-scripts --watch ./dev-node-server.js ./dev-node-server.js localhost 8080",
+    "dev-server": "nodemon --ignore node-utility-scripts --watch ./functions/index.js ./functions/index.js localhost 8080",
     "build": "webpack --config webpack.config.js"
   },
   "author": "Ben Upham",
